# cpp_cuda_vscode_debug_demo

./: CMakeLists copy 2.txt  CMakeLists copy 3.txt  CMakeLists copy.txt  CMakeLists-add-library-work.txt  CMakeLists-compile-all-together.txt  CMakeLists-cuda-add-library-failed.txt  CMakeLists-cuda-add-library-failed1.txt  CMakeLists-original.txt  CMakeLists.txt  CMakeLists_bad.txt  README.md
docker/: Dockerfile  create_container.sh
include/pointpillars_detection/: scatter.hpp  visibility_control.hpp
include/si/: defs.h
src/: main.cpp  scatter.cu
test/: test_pointpillars_detection.cpp
